[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Options/Confirm.gd" type="Script" id=1]
[ext_resource path="res://FonteMenu.tres" type="DynamicFont" id=2]

[node name="Confirm" type="CanvasLayer"]
pause_mode = 2
layer = 10
script = ExtResource( 1 )

[node name="ConfirmNode" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="ConfirmNode"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.2, 0.207843, 0.211765, 0.796078 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="ConfirmNode"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -104.5
margin_right = 640.0
margin_bottom = 104.5
mouse_filter = 2
color = Color( 0.2, 0.207843, 0.211765, 1 )

[node name="ConfirmationMessage" type="Label" parent="ConfirmNode/ColorRect2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -608.0
margin_top = -104.0
margin_right = 608.0
margin_bottom = 7.0
custom_fonts/font = ExtResource( 2 )
text = "
Tem certeza que deseja sair ?"
align = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ConfirmNode/ColorRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 123.0
margin_bottom = -33.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmQuit" type="Button" parent="ConfirmNode/ColorRect2/HBoxContainer"]
margin_left = 542.0
margin_right = 609.0
margin_bottom = 53.0
custom_fonts/font = ExtResource( 2 )
text = "Sim"

[node name="Label" type="Label" parent="ConfirmNode/ColorRect2/HBoxContainer"]
margin_left = 613.0
margin_top = 19.0
margin_right = 653.0
margin_bottom = 33.0
text = "          "

[node name="NoConfirmQuit" type="Button" parent="ConfirmNode/ColorRect2/HBoxContainer"]
margin_left = 657.0
margin_right = 738.0
margin_bottom = 53.0
custom_fonts/font = ExtResource( 2 )
text = "Nao"

[connection signal="mouse_entered" from="ConfirmNode/ColorRect2/HBoxContainer/ConfirmQuit" to="." method="_on_ConfirmQuit_mouse_entered"]
[connection signal="pressed" from="ConfirmNode/ColorRect2/HBoxContainer/ConfirmQuit" to="." method="_on_ConfirmQuit_pressed"]
[connection signal="mouse_entered" from="ConfirmNode/ColorRect2/HBoxContainer/NoConfirmQuit" to="." method="_on_NoConfirmQuit_mouse_entered"]
[connection signal="pressed" from="ConfirmNode/ColorRect2/HBoxContainer/NoConfirmQuit" to="." method="_on_NoConfirmQuit_pressed"]
